--- a/state_basin_summary.Rmd
+++ b/state_basin_summary.Rmd
@@ -50,16 +50,16 @@ param_sum <- param_sum_stn
 load(paste0(project_dir, name, "_param_summary_by_au.RData"))
 param_sum <- param_sum %>% dplyr::filter(!is.na(AU_ID))
 param_sum <- param_sum %>% dplyr::filter(AU_ID != "")
-param_sum$Char_Name <- AWQMS_to_standard(param_sum$Char_Name)
+param_sum$Char_Name <- odeqstatusandtrends::AWQMS_to_standard(param_sum$Char_Name)
 param_sum_au <- param_sum_au %>% dplyr::filter(!is.na(AU_ID))
 param_sum_au <- param_sum_au %>% dplyr::filter(AU_ID != "")
-param_sum_au$Char_Name <- AWQMS_to_standard(param_sum_au$Char_Name)
+param_sum_au$Char_Name <- odeqstatusandtrends::AWQMS_to_standard(param_sum_au$Char_Name)
 status_current <- as.symbol(colnames(param_sum)[grep("trend", colnames(param_sum)) - 1])
 
-area <- readOGR(dsn = 'N:/Status_and_Trend_Reports/GIS', layer = 'Report_Units_HUC08', integer64="warn.loss", verbose = FALSE, stringsAsFactors = FALSE)
+area <- rgdal::readOGR(dsn = 'N:/Status_and_Trend_Reports/GIS', layer = 'Report_Units_HUC08', integer64="warn.loss", verbose = FALSE, stringsAsFactors = FALSE)
 area <- area[area$REPORT %in% c(name), ]
 area <- sf::st_as_sf(area)
-area <- st_transform(area, 4326)
+area <- sf::st_transform(area, 4326)
 
 wql_streams <- sf::st_read(
   dsn = "//deqhq1/WQNPS/Agriculture/Status_and_Trend_Analysis/R_support_files",
@@ -69,10 +69,10 @@ wql_streams <- sf::st_read(
   stringsAsFactors = FALSE, quiet = TRUE
 )
 wql_streams$Char_Name <- unlist(sapply(wql_streams$POLLUTANT, AWQMS_Char_Names, USE.NAMES = FALSE))
-wql_streams$Char_Name <- AWQMS_to_standard(wql_streams$Char_Name)
+wql_streams$Char_Name <- odeqstatusandtrends::AWQMS_to_standard(wql_streams$Char_Name)
 wql_streams <- sf::st_zm(wql_streams, what = "ZM")
-wql_streams <- st_transform(wql_streams, 4326)
-wql_streams <- filter(wql_streams[, c("STREAM_NAM", "SEGMENT_ID", "SEASON", "Char_Name", "LISTING_ST", "TMDL_INFO")], Char_Name %in% unique(param_sum$Char_Name))
+wql_streams <- sf::st_transform(wql_streams, 4326)
+wql_streams <- dplyr::filter(wql_streams[, c("STREAM_NAM", "SEGMENT_ID", "SEASON", "Char_Name", "LISTING_ST", "TMDL_INFO")], Char_Name %in% unique(param_sum$Char_Name))
 wql_streams <- wql_streams[lapply(wql_streams$`_ogr_geometry_`, length) != 0,]
 
 if(!dir.exists(paste0(project_dir, "/Maps"))) {dir.create(paste0(project_dir, "/Maps"))}
@@ -97,37 +97,37 @@ wql_data <- read.csv('//deqhq1/WQNPS/Status_and_Trend_Reports/Lookups_Statewide/
                      stringsAsFactors = FALSE)
 
 param_sum <- param_sum[,c("AU_Name", colnames(param_sum)[colnames(param_sum) != "AU_Name"])]
-param_sum$AU_Type <- if_else(grepl("_SR_", param_sum$AU_ID),
-                             "Stream",
-                             if_else(grepl("_LK_", param_sum$AU_ID),
-                                     "Lake",
-                                     if_else(grepl("_WS_", param_sum$AU_ID),
-                                             "Watershed Unit",
-                                             if_else(grepl("_EB_", param_sum$AU_ID),
-                                                     "Estuary or Bay",
-                                                     if_else(grepl("_CL_", param_sum$AU_ID),
-                                                             "Coastline",
-                                                             NA_character_
-                                                     )
-                                             )
-                                     )
-                             )
+param_sum$AU_Type <- dplyr::if_else(grepl("_SR_", param_sum$AU_ID),
+                                    "Stream",
+                                    dplyr::if_else(grepl("_LK_", param_sum$AU_ID),
+                                                   "Lake",
+                                                   dplyr::if_else(grepl("_WS_", param_sum$AU_ID),
+                                                                  "Watershed Unit",
+                                                                  dplyr::if_else(grepl("_EB_", param_sum$AU_ID),
+                                                                                 "Estuary or Bay",
+                                                                                 dplyr::if_else(grepl("_CL_", param_sum$AU_ID),
+                                                                                                "Coastline",
+                                                                                                NA_character_
+                                                                                 )
+                                                                  )
+                                                   )
+                                    )
 )
-param_sum_au$AU_Type <- if_else(grepl("_SR_", param_sum_au$AU_ID),
-                                "Stream",
-                                if_else(grepl("_LK_", param_sum_au$AU_ID),
-                                        "Lake",
-                                        if_else(grepl("_WS_", param_sum_au$AU_ID),
-                                                "Watershed Unit",
-                                                if_else(grepl("_EB_", param_sum_au$AU_ID),
-                                                        "Estuary or Bay",
-                                                        if_else(grepl("_CL_", param_sum_au$AU_ID),
-                                                                "Coastline",
-                                                                NA_character_
-                                                        )
-                                                )
-                                        )
-                                )
+param_sum_au$AU_Type <- dplyr::if_else(grepl("_SR_", param_sum_au$AU_ID),
+                                       "Stream",
+                                       dplyr::if_else(grepl("_LK_", param_sum_au$AU_ID),
+                                                      "Lake",
+                                                      dplyr::if_else(grepl("_WS_", param_sum_au$AU_ID),
+                                                                     "Watershed Unit",
+                                                                     dplyr::if_else(grepl("_EB_", param_sum_au$AU_ID),
+                                                                                    "Estuary or Bay",
+                                                                                    dplyr::if_else(grepl("_CL_", param_sum_au$AU_ID),
+                                                                                                   "Coastline",
+                                                                                                   NA_character_
+                                                                                    )
+                                                                     )
+                                                      )
+                                       )
 )
 param_sum[param_sum$AU_ID == "Sru Lake", c("AU_Name", "AU_Type")] <- c("Sru Lake", "Lake")
 param_sum_au[param_sum_au$AU_ID == "Sru Lake", c("AU_Name", "AU_Type")] <- c("Sru Lake", "Lake")
@@ -181,35 +181,35 @@ for(i in unique(param_sum$Pollutant)){
   } else {parameter_name <- "pH"}
   
   if(!file.exists(paste0(project_dir, "/Maps/", gsub(",| ", "_", i), ".png"))){
-    wql_streams_i <- filter(wql_streams[, c("STREAM_NAM", "SEGMENT_ID", "SEASON", "Char_Name", "LISTING_ST", "TMDL_INFO")], Char_Name == i)
+    wql_streams_i <- dplyr::filter(wql_streams[, c("STREAM_NAM", "SEGMENT_ID", "SEASON", "Char_Name", "LISTING_ST", "TMDL_INFO")], Char_Name == i)
     wql_streams_i <- wql_streams_i[lapply(wql_streams_i$`_ogr_geometry_`, length) != 0,]
     
-    map_df <- param_sum %>% filter(Pollutant == i) %>% mutate(color = if_else(!!status_current %in% c("Unassessed", "Insufficient Data"),
-                                                                              "lightgray",
-                                                                              if_else(!!status_current == "Not Attaining",
-                                                                                      "orange",
-                                                                                      "green")
+    map_df <- param_sum %>% dplyr::filter(Pollutant == i) %>% dplyr::mutate(color = dplyr::if_else(!!status_current %in% c("Unassessed", "Insufficient Data"),
+                                                                                                   "lightgray",
+                                                                                                   dplyr::if_else(!!status_current == "Not Attaining",
+                                                                                                                  "orange",
+                                                                                                                  "green")
     ))
     
-    map <- leaflet(map_df, options = leafletOptions(zoomControl = FALSE)) %>% 
-      addProviderTiles("Esri.NatGeoWorldMap") %>% 
-      addPolylines(data = wql_streams_i,
-                   opacity = 1,
-                   weight = 2,
-                   color = "red",
-                   smoothFactor = 2,
-                   group = "WQ Listed Streams"
+    map <- leaflet::leaflet(map_df, options = leaflet::leafletOptions(zoomControl = FALSE)) %>% 
+      leaflet::addProviderTiles("Esri.NatGeoWorldMap") %>% 
+      leaflet::addPolylines(data = wql_streams_i,
+                            opacity = 1,
+                            weight = 2,
+                            color = "red",
+                            smoothFactor = 2,
+                            group = "WQ Listed Streams"
       ) %>% 
-      addPolygons(data = area, fill = FALSE, group = "Basin", opacity = 1, weight = 3, color = "black", label = paste(name, "Basin")) %>%
-      addCircleMarkers(lng = ~Long_DD, lat = ~Lat_DD, fillColor = ~color, stroke = TRUE, weight = 1, 
-                       opacity = 1, fillOpacity = 1, color = 'black', radius = 4.5, label = ~color) %>% 
-      addControl(position = "bottomright", className = "legend",
-                 html = sprintf('<html><body><div style="opacity:0.95">
+      leaflet::addPolygons(data = area, fill = FALSE, group = "Basin", opacity = 1, weight = 3, color = "black", label = paste(name, "Basin")) %>%
+      leaflet::addCircleMarkers(lng = ~Long_DD, lat = ~Lat_DD, fillColor = ~color, stroke = TRUE, weight = 1, 
+                                opacity = 1, fillOpacity = 1, color = 'black', radius = 4.5, label = ~color) %>% 
+      leaflet::addControl(position = "bottomright", className = "legend",
+                          html = sprintf('<html><body><div style="opacity:0.95">
                                         <img width="175" height="150" src="data:image/png;base64,%s">
                             </div></body></html>', lgnd)) %>% 
-      addControl(html = paste('<div style="opacity:0.95; background:white; padding:0px 6px; border-radius: 8px; font-size:18px"><b>', 
-                              name, parameter_name, "Status</b></div>"), 
-                 position = "topleft", className = "map_title")
+      leaflet::addControl(html = paste('<div style="opacity:0.95; background:white; padding:0px 6px; border-radius: 8px; font-size:18px"><b>', 
+                                       name, parameter_name, "Status</b></div>"), 
+                          position = "topleft", className = "map_title")
     
     mapview::mapshot(map, file = paste0(project_dir, "/Maps/", gsub(",| ", "_", i), ".png")
                      , selfcontained = FALSE)
@@ -226,12 +226,12 @@ cat("### Status\n\n")
 
 cat(paste0(tbls(name = paste0(name, "_au_sum"), display = 'cite'), " shows the number of attaining, not attaining, and unassessed assessment units by parameter.\n\n"))
 
-au_sum <- param_sum_au %>% group_by(Char_Name) %>% 
-  summarise(Attaining = sum(status_2015_2018 == "Attaining"),
-            'Not Attaining' = sum(status_2015_2018 == "Not Attaining"),
-            Unassessed = sum(status_2015_2018 == "Unassessed")) %>% 
-  mutate(Char_Name = sapply(Char_Name, simpleCap, USE.NAMES = FALSE)) %>% 
-  rename(Pollutant = Char_Name)
+au_sum <- param_sum_au %>% dplyr::group_by(Char_Name) %>% 
+  dplyr::summarise(Attaining = sum(status_2015_2018 == "Attaining"),
+                   'Not Attaining' = sum(status_2015_2018 == "Not Attaining"),
+                   Unassessed = sum(status_2015_2018 == "Unassessed")) %>% 
+  dplyr::mutate(Char_Name = sapply(Char_Name, simpleCap, USE.NAMES = FALSE)) %>% 
+  dplyr::rename(Pollutant = Char_Name)
 
 knitr::kable(au_sum, padding = 0, digits = 1, row.names = FALSE, format = table_format,
              caption = tbls(name = paste0(name, "_au_sum"), caption = paste0("Summary of assessment unit status within the ", name, " Basin."))
@@ -239,24 +239,24 @@ knitr::kable(au_sum, padding = 0, digits = 1, row.names = FALSE, format = table_
 
 cat("\n\n")
 
-ggplot(reshape2::melt(au_sum, id.vars = "Pollutant", variable.name = "Status"))+
-  geom_bar(aes(x = Pollutant, y = value, fill = Status), stat = "identity", position = "dodge")+
-  xlab("Pollutant")+
-  ylab("# of Assessment Units")+
-  scale_fill_manual(values = c("Attaining" = "forestgreen", "Not Attaining" = "orange", "Unassessed" = "gray"))+
-  theme_bw()+
-  ggtitle("Assessment Unit Attainment Count", subtitle = "Summarized by Pollutant")
+ggplot2::ggplot(reshape2::melt(au_sum, id.vars = "Pollutant", variable.name = "Status"))+
+  ggplot2::geom_bar(aes(x = Pollutant, y = value, fill = Status), stat = "identity", position = "dodge")+
+  ggplot2::xlab("Pollutant")+
+  ggplot2::ylab("# of Assessment Units")+
+  ggplot2::scale_fill_manual(values = c("Attaining" = "forestgreen", "Not Attaining" = "orange", "Unassessed" = "gray"))+
+  ggplot2::theme_bw()+
+  ggplot2::ggtitle("Assessment Unit Attainment Count", subtitle = "Summarized by Pollutant")
 
 cap_list[[1]] <- figs(name = paste0(name, "_au_sum_plot"), caption = paste0("Summary plot of assessment unit status within the ", name, " Basin by parameter."))
 
 cat(paste0("\n\n",tbls(name = paste0(name, "_au_type_sum"), display = 'cite')," and ", figs(name = paste0(name, "_au_sum_plot"), display = 'cite')," summarizes the number of attaining, not attaining, and unassessed assessment units by parameter and assessment unit type within the ", name," Basin.\n\n"))
 
-au_sum_type <- param_sum_au %>% group_by(AU_Type, Char_Name) %>% 
-  summarise(Attaining = sum(status_2015_2018 == "Attaining"),
-            "Not Attaining" = sum(status_2015_2018 == "Not Attaining"),
-            Unassessed = sum(status_2015_2018 == "Unassessed")) %>% 
-  mutate(Char_Name = sapply(Char_Name, simpleCap, USE.NAMES = FALSE)) %>% 
-  rename("AU Type" = AU_Type, Pollutant = Char_Name)
+au_sum_type <- param_sum_au %>% dplyr::group_by(AU_Type, Char_Name) %>% 
+  dplyr::summarise(Attaining = sum(status_2015_2018 == "Attaining"),
+                   "Not Attaining" = sum(status_2015_2018 == "Not Attaining"),
+                   Unassessed = sum(status_2015_2018 == "Unassessed")) %>% 
+  dplyr::mutate(Char_Name = sapply(Char_Name, simpleCap, USE.NAMES = FALSE)) %>% 
+  dplyr::rename("AU Type" = AU_Type, Pollutant = Char_Name)
 
 knitr::kable(au_sum_type, padding = 0, digits = 1, row.names = FALSE, format = table_format
              ,
@@ -268,11 +268,11 @@ cat("\n\n")
 
 cat(paste0("\n\n", tbls(name = paste0(name, "_stn_sum"), display = 'cite')," and ", figs(name = paste0(name, "_stn_sum_plot"), display = 'cite')," summarizes the number of attaining, not attaining, and unassessed stations by parameter.\n\n"))
 
-stn_sum <- param_sum %>% group_by(Pollutant) %>% 
-  summarise(Attaining = sum(status_2015_2018 == "Attaining"),
-            "Not Attaining" = sum(status_2015_2018 == "Not Attaining"),
-            Unassessed = sum(status_2015_2018 == "Unassessed")) %>% 
-  mutate(Pollutant = sapply(Pollutant, simpleCap, USE.NAMES = FALSE))
+stn_sum <- param_sum %>% dplyr::group_by(Pollutant) %>% 
+  dplyr::summarise(Attaining = sum(status_2015_2018 == "Attaining"),
+                   "Not Attaining" = sum(status_2015_2018 == "Not Attaining"),
+                   Unassessed = sum(status_2015_2018 == "Unassessed")) %>% 
+  dplyr::mutate(Pollutant = sapply(Pollutant, simpleCap, USE.NAMES = FALSE))
 
 knitr::kable(stn_sum, padding = 0, digits = 1, row.names = FALSE, format = table_format
              ,
@@ -281,13 +281,13 @@ knitr::kable(stn_sum, padding = 0, digits = 1, row.names = FALSE, format = table
 
 cat("\n\n")
 
-ggplot(reshape2::melt(stn_sum, id.vars = "Pollutant", variable.name = "Status"))+
-  geom_bar(aes(x = Pollutant, y = value, fill = Status), stat = "identity", position = "dodge")+
-  xlab("Pollutant")+
-  ylab("# of Stations")+
-  scale_fill_manual(values = c("Attaining" = "forestgreen", "Not Attaining" = "orange", "Unassessed" = "gray"))+
-  theme_bw()+
-  ggtitle("Station Attainment Count", subtitle = "Summarized by Pollutant")
+ggplot2::ggplot(reshape2::melt(stn_sum, id.vars = "Pollutant", variable.name = "Status"))+
+  ggplot2::geom_bar(aes(x = Pollutant, y = value, fill = Status), stat = "identity", position = "dodge")+
+  ggplot2::xlab("Pollutant")+
+  ggplot2::ylab("# of Stations")+
+  ggplot2::scale_fill_manual(values = c("Attaining" = "forestgreen", "Not Attaining" = "orange", "Unassessed" = "gray"))+
+  ggplot2::theme_bw()+
+  ggplot2::ggtitle("Station Attainment Count", subtitle = "Summarized by Pollutant")
 
 cap_list[[2]] <- figs(name = paste0(name, "_stn_sum_plot"), caption = paste0("Summary plot of station status within the ", name, " Basin by parameter."))
 
@@ -296,14 +296,14 @@ cat("### Trend\n\n")
 
 cat(paste0("\n\nA summary of the trends across parameters is shown in ",tbls(name = paste0(name, "_stn_trend_sum"), display="cite"),". Note that trend requires significantly more data than status and may result in many stations with sufficient data for assessing status, but insufficient data for assessing trend.\n\n"))
 
-stn_sum <- param_sum %>% group_by(Pollutant) %>% 
-  summarise(Improving = sum(trend == "Improving"),
-            Degrading = sum(trend == "Degrading"),
-            Steady = sum(trend == "Steady"),
-            "No Significant Trend" = sum(trend == "No Significant Trend"),
-            "Insufficient Data" = sum(trend == "Insufficient Data"),
+stn_sum <- param_sum %>% dplyr::group_by(Pollutant) %>% 
+  dplyr::summarise(Improving = sum(trend == "Improving"),
+                   Degrading = sum(trend == "Degrading"),
+                   Steady = sum(trend == "Steady"),
+                   "No Significant Trend" = sum(trend == "No Significant Trend"),
+                   "Insufficient Data" = sum(trend == "Insufficient Data"),
   ) %>% 
-  mutate(Pollutant = sapply(Pollutant, simpleCap, USE.NAMES = FALSE))
+  dplyr::mutate(Pollutant = sapply(Pollutant, simpleCap, USE.NAMES = FALSE))
 
 knitr::kable(stn_sum, padding = 0, digits = 1, row.names = FALSE, format = table_format
              ,
@@ -327,7 +327,7 @@ for(i in unique(param_sum$HUC8)){
   data <- param_sum %>% dplyr::filter(HUC8 == i)
   map_df <- data
   par_sum <- data %>% dplyr::select(-Lat_DD, -Long_DD, -HUC8, -HUC8_Name)
-  par_sum_au <- param_sum_au %>% filter(AU_ID %in% data$AU_ID)
+  par_sum_au <- param_sum_au %>% dplyr::filter(AU_ID %in% data$AU_ID)
   
   subbasin_name <- huc_names[huc_names$HUC8 == i,]$HUC8_Name
   sub_area <- area[area$HUC_8 == i,]
