--- a/state_subbasin_summary.Rmd
+++ b/state_subbasin_summary.Rmd
@@ -30,7 +30,7 @@ knitr::opts_chunk$set(echo = FALSE,
                       fig.path = paste0(out_dir, "/Figures/"),
                       fig.width = 12, 
                       fig.height = 6
-                      )
+)
 
 options(kableExtra.auto_format = F)
 
@@ -54,22 +54,22 @@ wql_sub <- wql_data[grep(i, wql_data$HUC_4TH_CO), c('STREAM_LAK', 'LLID_STREA',
                  'POLLUTANT' = 'Pollutant'))
 if(nrow(wql_sub) > 0){
   
-wql_sub <- wql_sub[grep("Cat 5|Cat 4A", wql_sub$`Listing Status`, ignore.case = TRUE), 
-                   c('Waterbody', 'MILES', 'Pollutant', 'SEASON', 'Year Assessed', 'CRITERIA', 'Listing Status')] %>% 
-  dplyr::arrange(Waterbody)
-
-wql_sub$`Listing Status` <- gsub("Cat 4A: Water quality limited, TMDL approved", "Cat 4A", wql_sub$`Listing Status`)
-wql_sub[grep("Cat 5", wql_sub$`Listing Status`, ignore.case = TRUE), "Listing Status"] <- "Cat 5"
-
-wql_sub <- wql_sub %>% group_by(Pollutant) %>% summarise('Segments Impaired' = n())
-
-knitr::kable(wql_sub, format = table_format, padding = 0, digits = 1, row.names = FALSE,
-             caption = tbls(name = paste0(subbasin_name, "_wql"),
-                            caption = paste0("Number of water quality impaired stream segments in the ", 
-                                             subbasin_name,
-                                             " Subbasin for the parameters assessed in this report. Impairments are summarized from the final 2012 303(d) integrated report."))) %>% 
-  table_style()
-
+  wql_sub <- wql_sub[grep("Cat 5|Cat 4A", wql_sub$`Listing Status`, ignore.case = TRUE), 
+                     c('Waterbody', 'MILES', 'Pollutant', 'SEASON', 'Year Assessed', 'CRITERIA', 'Listing Status')] %>% 
+    dplyr::arrange(Waterbody)
+  
+  wql_sub$`Listing Status` <- gsub("Cat 4A: Water quality limited, TMDL approved", "Cat 4A", wql_sub$`Listing Status`)
+  wql_sub[grep("Cat 5", wql_sub$`Listing Status`, ignore.case = TRUE), "Listing Status"] <- "Cat 5"
+  
+  wql_sub <- wql_sub %>% dplyr::group_by(Pollutant) %>% dplyr::summarise('Segments Impaired' = n())
+  
+  knitr::kable(wql_sub, format = table_format, padding = 0, digits = 1, row.names = FALSE,
+               caption = tbls(name = paste0(subbasin_name, "_wql"),
+                              caption = paste0("Number of water quality impaired stream segments in the ", 
+                                               subbasin_name,
+                                               " Subbasin for the parameters assessed in this report. Impairments are summarized from the final 2012 303(d) integrated report."))) %>% 
+    table_style()
+  
 } else {cat("There are no water quality impaired Category 4A or Category 5 stream segments in this subbasin.")}
 
 ```
@@ -80,17 +80,17 @@ There are `r length(unique(par_sum_au$AU_ID))` assessment units within the `r su
 
 ```{r status-au-table-sum, include = TRUE, results = 'asis'}
 
-au_sum <- par_sum_au %>% group_by(Char_Name) %>% 
-  summarise(Attaining = sum(status_2015_2018 == "Attaining"),
-            "Not Attaining" = sum(status_2015_2018 == "Not Attaining"),
-            Unassessed = sum(status_2015_2018 == "Unassessed")) %>% 
-  mutate(Char_Name = sapply(Char_Name, simpleCap, USE.NAMES = FALSE)) %>% 
-  rename(Pollutant = Char_Name)
+au_sum <- par_sum_au %>% dplyr::group_by(Char_Name) %>% 
+  dplyr::summarise(Attaining = sum(status_2015_2018 == "Attaining"),
+                   "Not Attaining" = sum(status_2015_2018 == "Not Attaining"),
+                   Unassessed = sum(status_2015_2018 == "Unassessed")) %>% 
+  dplyr::mutate(Char_Name = sapply(Char_Name, simpleCap, USE.NAMES = FALSE)) %>% 
+  dplyr::rename(Pollutant = Char_Name)
 
 knitr::kable(au_sum, padding = 0, digits = 1, row.names = FALSE, format = table_format,
              caption = tbls(name = paste0(subbasin_name, "_au_sum"),
                             caption = paste0("Summary of assessment unit status within the ", subbasin_name, " Subbasin."))
-             ) %>% 
+) %>% 
   table_style()
 
 ```
@@ -100,13 +100,13 @@ knitr::kable(au_sum, padding = 0, digits = 1, row.names = FALSE, format = table_
 
 cap_list <- list()
 
-ggplot(reshape2::melt(au_sum, id.vars = "Pollutant", variable.name = "Status"))+
-  geom_bar(aes(x = Pollutant, y = value, fill = Status), stat = "identity", position = "dodge")+
-  xlab("Pollutant")+
-  ylab("# of Assessment Units")+
-  scale_fill_manual(values = c("Attaining" = "forestgreen", "Not Attaining" = "orange", "Unassessed" = "gray"))+
-  theme_bw()+
-  ggtitle("Assessment Unit Attainment Count", subtitle = "Summarized by Pollutant")
+ggplot2::ggplot(reshape2::melt(au_sum, id.vars = "Pollutant", variable.name = "Status"))+
+  ggplot2::geom_bar(aes(x = Pollutant, y = value, fill = Status), stat = "identity", position = "dodge")+
+  ggplot2::xlab("Pollutant")+
+  ggplot2::ylab("# of Assessment Units")+
+  ggplot2::scale_fill_manual(values = c("Attaining" = "forestgreen", "Not Attaining" = "orange", "Unassessed" = "gray"))+
+  ggplot2::theme_bw()+
+  ggplot2::ggtitle("Assessment Unit Attainment Count", subtitle = "Summarized by Pollutant")
 
 cap_list[[1]] <- figs(name = paste0(subbasin_name, "_au_sum_plot"), caption = paste0("Summary plot of assessment unit status within the ", subbasin_name, " Subbasin by parameter."))
 
@@ -116,34 +116,34 @@ Oregon DEQ groups assessment units into four types; streams, lakes, watershed un
 
 ```{r status-au-table-type, include = TRUE, results = 'asis'}
 
-au_sum_type <- par_sum_au %>% group_by(AU_Type, Char_Name) %>% 
-  summarise(Attaining = sum(status_2015_2018 == "Attaining"),
-            "Not Attaining" = sum(status_2015_2018 == "Not Attaining"),
-            Unassessed = sum(status_2015_2018 == "Unassessed")) %>% 
-  mutate(Char_Name = sapply(Char_Name, simpleCap, USE.NAMES = FALSE)) %>% 
-  rename("AU Type" = AU_Type, Pollutant = Char_Name)
+au_sum_type <- par_sum_au %>% dplyr::group_by(AU_Type, Char_Name) %>% 
+  dplyr::summarise(Attaining = sum(status_2015_2018 == "Attaining"),
+                   "Not Attaining" = sum(status_2015_2018 == "Not Attaining"),
+                   Unassessed = sum(status_2015_2018 == "Unassessed")) %>% 
+  dplyr::mutate(Char_Name = sapply(Char_Name, simpleCap, USE.NAMES = FALSE)) %>% 
+  dplyr::rename("AU Type" = AU_Type, Pollutant = Char_Name)
 
 knitr::kable(au_sum_type, padding = 0, digits = 1, row.names = FALSE, format = table_format, 
              caption = tbls(name = paste0(subbasin_name, "_au_type_sum"),
                             caption = paste0(subbasin_name, " Subbasin status summary of assessment units by type."))) %>%
   table_style()
-             
+
 ```
 
 There are `r length(unique(par_sum$MLocID))` stations within the `r subbasin_name` subbasin that were included in this report.  `r tbls(name = paste0(subbasin_name, "_stn_sum"), display="cite")` and `r figs(name = paste0(subbasin_name, "_stn_sum_plot"), display="cite")` summarizes the number of attaining, not attaining, and unassessed stations by parameter.
 
 ```{r status-stn-table-sum, include = TRUE, results = 'asis'}
 
-stn_sum <- par_sum %>% group_by(Pollutant) %>% 
-  summarise(Attaining = sum(status_2015_2018 == "Attaining"),
-            "Not Attaining" = sum(status_2015_2018 == "Not Attaining"),
-            Unassessed = sum(status_2015_2018 == "Unassessed")) %>% 
-  mutate(Pollutant = sapply(Pollutant, simpleCap, USE.NAMES = FALSE))
+stn_sum <- par_sum %>% dplyr::group_by(Pollutant) %>% 
+  dplyr::summarise(Attaining = sum(status_2015_2018 == "Attaining"),
+                   "Not Attaining" = sum(status_2015_2018 == "Not Attaining"),
+                   Unassessed = sum(status_2015_2018 == "Unassessed")) %>% 
+  dplyr::mutate(Pollutant = sapply(Pollutant, simpleCap, USE.NAMES = FALSE))
 
 knitr::kable(stn_sum, padding = 0, digits = 1, row.names = FALSE, format = table_format,
              caption = tbls(name = paste0(subbasin_name, "_stn_sum"),
                             caption = paste0("Summary of the status of stations within the ", subbasin_name, " Subbasin."))
-             ) %>%
+) %>%
   table_style()
 
 ```
@@ -151,13 +151,13 @@ knitr::kable(stn_sum, padding = 0, digits = 1, row.names = FALSE, format = table
 
 ```{r status-stn-plot, include = TRUE, results = 'asis', fig.cap = cap_list, eval.after = 'fig.cap'}
 
-ggplot(reshape2::melt(stn_sum, id.vars = "Pollutant", variable.name = "Status"))+
-  geom_bar(aes(x = Pollutant, y = value, fill = Status), stat = "identity", position = "dodge")+
-  xlab("Pollutant")+
-  ylab("# of Stations")+
-  scale_fill_manual(values = c("Attaining" = "forestgreen", "Not Attaining" = "orange", "Unassessed" = "gray"))+
-  theme_bw()+
-  ggtitle("Station Attainment Count", subtitle = "Summarized by Pollutant")
+ggplot2::ggplot(reshape2::melt(stn_sum, id.vars = "Pollutant", variable.name = "Status"))+
+  ggplot2::geom_bar(aes(x = Pollutant, y = value, fill = Status), stat = "identity", position = "dodge")+
+  ggplot2::xlab("Pollutant")+
+  ggplot2::ylab("# of Stations")+
+  ggplot2::scale_fill_manual(values = c("Attaining" = "forestgreen", "Not Attaining" = "orange", "Unassessed" = "gray"))+
+  ggplot2::theme_bw()+
+  ggplot2::ggtitle("Station Attainment Count", subtitle = "Summarized by Pollutant")
 
 cap_list[[2]] <- figs(name = paste0(subbasin_name, "_stn_sum_plot"),
                       caption = paste0("Summary plot of station status within the ", subbasin_name, " Subbasin by parameter."))
@@ -170,18 +170,18 @@ A summary of the trends within parameters is shown in `r tbls(name = paste0(subb
 
 ```{r trend-table, include = TRUE, results = 'asis'}
 
-stn_sum <- par_sum %>% group_by(Pollutant) %>% 
-  summarise(Improving = sum(trend == "Improving"),
-            Degrading = sum(trend == "Degrading"),
-            Steady = sum(trend == "Steady"),
-            "No Significant Trend" = sum(trend == "No Significant Trend"),
-            "Insufficient Data" = sum(trend == "Insufficient Data")) %>% 
-  mutate(Pollutant = sapply(Pollutant, simpleCap, USE.NAMES = FALSE))
+stn_sum <- par_sum %>% dplyr::group_by(Pollutant) %>% 
+  dplyr::summarise(Improving = sum(trend == "Improving"),
+                   Degrading = sum(trend == "Degrading"),
+                   Steady = sum(trend == "Steady"),
+                   "No Significant Trend" = sum(trend == "No Significant Trend"),
+                   "Insufficient Data" = sum(trend == "Insufficient Data")) %>% 
+  dplyr::mutate(Pollutant = sapply(Pollutant, simpleCap, USE.NAMES = FALSE))
 
 knitr::kable(stn_sum, padding = 0, digits = 1, row.names = FALSE, format = table_format,
              caption = tbls(name = paste0(subbasin_name, "_stn_trend_sum"),
                             caption = paste0("Subbasin Summary of trend results at stations across the ",subbasin_name, "."))
-             ) %>% 
+) %>% 
   table_style()
 
 cat("\n\n")
